Fix next-page button alignment

--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -71,7 +71,6 @@ h3 strong {
 .puzzle-multiple-choice {
     width: 100%;
     margin: 10px 0;
-    text-align: center;
 }
 
 .puzzle-multiple-choice ul {
@@ -173,7 +172,6 @@ h3 strong {
     user-select: none;
     width: 100%;
     padding: 20px;
-    text-align: center;
     cursor: pointer;
     background-color: var(--purple);
     color: var(--darkBlack);
